# LearnHDKDev

./: CMakeLists.txt  Default_copy1.xml  HoudiniConfig.cmake  LICENSE  README.md  my_lib1.cpp  my_lib1.h
DL/: doc.md
DOP/01Gravity/: CMakeLists.txt  Gravity.cpp  Gravity.h  SIM_ForceOrbit.h
